# raspberry-pi-homelab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  DevWorkflow.md  Makefile  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  run-tests.sh
.github/workflows/: ci.yml  pre-commit.yml
docs/: BackupRestoreRunbook.md  DevWorkflow.md  monitoring.md
docs/architecture/: networking-and-firewall-model.md
docs/architecture/adr/: ADR-0001-networking-and-firewall.md  ADR-0007-secrets-and-env-files.md  ADR-0008-bind-mounts-only.md
docs/services/: vector.md
monitoring/: monitoring.md
monitoring/alertmanager/: alertmanager.env.example  alertmanager.yml.tmpl
monitoring/compose/: .env.example  docker-compose.yml  env.example  init-permissions.sh
monitoring/compose/alertmanager/: alertmanager.env.example
monitoring/compose/tests/: smoke.sh
monitoring/grafana/: grafana.env.example  grafana_dashboards.md
monitoring/grafana/dashboards/: .gnet-revisions.json  cadvisor-docker-insights-19908.json  docker-and-system-monitoring-13496.json  docker-monitoring-15789.json  manifest.json  node-exporter-full-1860.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: basic-alerts.yml  docker-engine.rules.yml  host-resources.yml  host-storage.yml  stack-self.yml
scripts/: bootstrap-networks.sh  cleanup-network-ufw.sh  ensure-journald-read.sh
scripts/grafana/: download-gnet.sh  normalize_dashboards.py  validate_dashboards.sh
scripts/host/: ensure-docker-daemon-json.sh
scripts/precommit/: block_env_files.py  compose_config.sh
stacks/core/docker/: daemon.json  (+1 more)
tests/: _helpers.py  conftest.py
tests/_lib/: compose.py  http.py
tests/doctor/: test_35_cadvisor_flags.py
tests/guards/: readme.md  test_00_no_prometheus_artifacts.py  test_10_grafana_datasource_points_to_vm.py  test_10_monitoring_compose_contract.py  test_20_grafana_datasource_contract.py
tests/postdeploy/: conftest.py  test_05_docker_daemon_json_and_metrics.py  test_10_containers.py  test_20_endpoints.py  test_20_health_endpoints.py  test_20_monitoring_runtime_smoke.py  test_21_victoriametrics_queries.py  test_21_vm_queries.py  test_22_alertmanager_config_rendered.py  test_22_victorialogs_stats_query.py  test_23_grafana_dashboard_alerts_metrics.py  test_25_cadvisor_metrics.py  test_25_victorialogs_ui_lan.py  test_30_prometheus_removed.py  test_30_prometheus_targets.py  test_30_vm_required_jobs.py  test_31_victorialogs_smoke.py  test_31_vmagent_targets.py  test_32_vmalert_api.py  test_35_docker_engine_metrics.py  test_35_network_and_ufw.py  test_40_vector_pipeline.py  test_45_host_journald_units_to_victorialogs.py  test_4x_host_journald_units_to_victorialogs.py  test_55_monitoring_data_dir_permissions.py  test_56_monitoring_no_volume_mounts.py  test_victoriametrics_stack.sh
tests/precommit/: test_10_no_tracked_env_and_secrets.py  test_15_json_valid.py  test_20_yamllint.py  test_25_no_merge_conflict_markers.py  test_30_compose_config.py  test_35_large_files.py  test_40_no_legacy_prometheus_config.py  test_40_prometheus_config.py  test_45_gitleaks.py
(+46 files in other folders)
