# background on pyproject.toml files: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry-pi-homelab"
version = "0.0.0"
requires-python = ">=3.12"
description = "IaC + monitoring homelab (Raspberry Pi) with reproducible tooling/tests"
readme = "README.md"
license = { text = "UNLICENSED" }

# Runtime dependencies (keep empty for now unless you ship an importable package)
dependencies = []

[project.optional-dependencies]
# WSL-only dev/test toolchain (venv). Keep Pi lean and run postdeploy there only.
dev = [
  "pytest>=8",
  "typeguard>=4",
  "pre-commit>=3.7",
  "yamllint>=1.33",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "precommit: fast checks intended for git pre-commit",
  "lint: static repo checks (yaml/json/merge markers/large files, etc.)",
  "doctor: tooling/config sanity checks for dev environments (WSL/Pi)",
  "postdeploy: checks intended to run on the Raspberry Pi after deployment",
]
addopts = [
  "--strict-markers",
  "--maxfail=1",
  "-m",
  "not postdeploy",
]

# Ruff (lint + formatter)
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort (import sorting)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # handled by formatter/line-length
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "S101", # allow assert in tests (only relevant if you enable bandit rules later)
]
